1.1.2 (#183)
See https://docs.swedenconnect.se/signservice/release-notes.html